# code_editor

./: .gitignore  Cargo.toml  Readme.md
code_editor/: Cargo.toml  Readme.md
code_editor/src/: codeeditor.rs  draw2d.rs  error.rs  lib.rs  scanner.rs  settings.rs  theme.rs  undo.rs
example_app/: Cargo.toml
example_app/src/: main.rs
