[package]
name = "code_editor"
version = "0.3.2"
edition = "2021"
authors = ["Markus Moenig"]
description = "A standalone code editor with syntax highlighting"
license = "MIT"
repository = "https://github.com/markusmoenig/code_editor.git"
keywords = ["code", "editor", "syntax", "highlighting"]

[dependencies]
fontdue = "0.7.2"
copypasta = "0.8.1"
