[package]
name = "example_app"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
pixels = "0.12.0"
winit = "0.28.3"
winit_input_helper = "0.14"
code_editor = { path = "../code_editor" }
